@@ -1,5 +1,7 @@
 Revision history for Perl extension Module::Build.
 
+ - Workaround Test::Pod::Coverage @INC bug. [Eric Wilhelm]
+
 0.2807 - Sat Mar 24 22:19:02 2007
 
  - Upgraded to version.pm 0.71. [John Peacock]
